--- a/index.html
+++ b/index.html
@@ -66,14 +66,15 @@
                 <span class="specification">
                   <span class="id">{{(catKey + 1)}}.{{subcatKey + 1}}.{{reqKey + 1}}.{{specKey + 1}}</span>. {{specification.description}}
                 </span>
-                <span class="unit text-muted">
+                <!-- <span class="unit text-muted">
                   Responsible Software Unit: <span class="unit-text">{{specification.unit}}</span>
-                </span>
+                </span> -->
                 <span class="test-container collapse in">
                   <table class="table table-striped table-bordered table-hover">
                     <thead>
                       <tr class="bg-primary">
                         <th>Test Id</th>
+                        <th>Software Unit</th>
                         <th>Test Criteria</th>
                         <th>Test Method</th>
                         <th>Test Results</th>
@@ -85,6 +86,9 @@
                         <td>
                           <span class="id" ng-if="test.id">{{test.id}}</span>
                           <span class="id" ng-if="!test.id">{{(catKey + 1)}}.{{subcatKey + 1}}.{{reqKey + 1}}.{{specKey + 1}}.{{testKey + 1}}</span>
+                        </td>
+                        <td>
+                          {{test.unit}}
                         </td>
                         <td>
                           {{test.criteria}}
