--- a/csv.html
+++ b/csv.html
@@ -15,7 +15,7 @@
     <textarea id="input" ng-model="yaml" ng-change="update()" style="height: 100%; width: 100%; top:0; bottom:0"></textarea>
   </div>
   <div class="output">
-    ID| Category| Regulatory| Subcategory| Requirement| Specification| Unit| Criteria| Method| Result| I/O? <br />
+    ID| Category| Regulatory| Subcategory| Requirement| Specification| Software Unit| Criteria| Method| Result| I/O? <br />
     <span ng-repeat="(catKey, category) in spec.categories">
       {{(catKey + 1)}}|
       {{category.name}}|
