--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <!-- <span class="unit text-muted">
                   Responsible Software Unit: <span class="unit-text">{{specification.unit}}</span>
                 </span> -->
-                <span class="test-container collapse in">
+                <span class="test-container collapse in" ng-if="specification.tests.length > 0">
                   <table class="table table-striped table-bordered table-hover">
                     <thead>
                       <tr class="bg-primary">
